tests/NormalTests/paczka1/small_fuzzy/75794127.err
Error in line 1: vZG3 S745 75,1
Error in line 2: Z4V6etO S745 69,5
Error in line 7: AYScHW1u S745 57,1
